# classical-chinese-transfer

./: .flake8  .gitignore  README.md  pyproject.toml
setup/: cjk-font.sh  python-mecab-ko.sh  python-unsloth.sh  python.sh
src/: README.md  __main__.py
src/corpus/: README.md
src/corpus/ajd/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/ajd_ner/: README.md  align.py  check.py  format.py  root.py  upload.py
src/corpus/dai_cc/: README.md  align.py  check.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/drri/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/drs/: README.md  align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/hue_ner/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/klc_hj/: align.py  check.py  clean.py  filter.py  filter2.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/klc_mt/: README.md  align.py  check.py  clean.py  filter.py  filter2.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/klc_ner/: README.md  align.py  check.py  filter.py  format.py  root.py  upload.py
src/corpus/niu_mt/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/niu_mt_ko/: README.md  align.py  check.py  format.py  hface_upload.py  root.py  upload.py
src/corpus/ocdb_mt/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/wyweb_mt/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/wyweb_mt_ko/: align.py  check.py  format.py  hface_upload.py  root.py  upload.py
src/corpus/wyweb_ner/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/corpus/wyweb_punc/: align.py  check.py  clean.py  filter.py  format.py  normal.py  root.py  split.py  upload.py
src/crawl/: README.md
src/crawl/ajd_cko/: book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/ajd_en/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/ajd_hj_oko/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/ajd_link/: README.md  book.py  format.py  lv1_dl.py  lv1_parse.py  root.py  upload.py
src/crawl/dai_cc/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  root.py  upload.py  url.md
src/crawl/drri_hj/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/drri_ko/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/drri_link/: book.py  format.py  lv1_dl.py  lv1_parse.py  root.py  upload.py
src/crawl/drs_hj/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/drs_ko/: README.md  book.py  check.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/drs_link/: book.py  format.py  lv1_dl.py  lv1_parse.py  root.py  upload.py  url.md
src/crawl/hue_ner/: book.py  check.py  clean.py  crawl_dl.py  format2.py  lv1_dl.py  lv1_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  lv4_dl.py  lv4_parse.py  parse.py  parse2.py  root.py  upload.py  url.md
src/crawl/klc_hj/: README.md  book.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  index_dl.py  index_parse.py  lv2_dl.py  lv2_parse.py  lv3_dl.py  lv3_parse.py  parse.py  parse2.py  parse3.py  root.py  upload.py  url.md
src/crawl/klc_hj_ko/: README.md  book.py  clean.py  clean2.py  crawl_dl.py  format.py  format2.py  index_dl.py  index_parse.py  (+5 more)
src/dataset/: README.md
src/eval/: README.md
src/train/: README.md
src/utils/: __init__.py  df.py  gdir.py  io.py  pool.py  punc.py  pure.py  web.py
(+951 files in other folders)
