[tool.poetry]
authors = ["anonymous <anonymous@anonymous.com>"]
description = "anonymous"
name = "anonymous"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
apprise = "^1.6.0"
hanja = "^0.14.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
humanize = "^4.8.0"
jellyfish = "^1.0.3"
jsonlines = "^4.0.0"
jupyter = "^1.0.0"
konlpy = "^0.6.0"
korean_romanizer = "^0.25.1"
loguru = "^0.7.2"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
numpy = "^1.26.2"
openai = "^1.16.2"
orjson = "^3.9.10"
pandarallel = "^1.6.5"
pandas = "2.2.1"
psutil = "^5.9.6"
py-cpuinfo = "^9.0.0"
py7zr = "^0.20.8"
python = ">=3.10,<3.11"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
rich = "^13.7.0"
sacrebleu = "^2.4.1"
sacremoses = "^0.1.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
seaborn = "^0.13.0"
sentencepiece = "^0.2.0"
seqeval = "^1.2.2"
statsmodels = "^0.14.0"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
tikzplotlib = "^0.10.1"
tqdm = "^4.66.1"
typer = "^0.12.1"
typing-extensions = "^4.8.0"
unsloth = {git = "https://github.com/unslothai/unsloth", extras = ["huggingface"], rev = "1e61cdbcb2a6c0c399d9e3e58a157ee1144ebf69"}
zstandard = "^0.22.0"

[tool.poetry.group.dev]
optional = false
[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
black = {extras = ["jupyter"], version = "^24.3.0"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
isort = "^5.12.0"
mypy = "^1.9.0"
nbqa = {extras = ["toolchain"], version = "^1.8.5"}
pandas-stubs = "2.2.1.240316"
poetry = "^1.8.2"
poetry-plugin-export = "^1.7.1"
pyclean = "^2.7.6"
pydocstyle = "^6.3.0"
pyinstaller = "^6.2.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.4.0"
rope = "^1.11.0"
ruff = "^0.3.5"
types-beautifulsoup4 = "^4.12.0.7"
types-commonmark = "^0.9.2.4"
types-pillow = "^10.1.0.2"
types-psutil = "^5.9.5.17"
types-pygments = "^2.16.0.1"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2023.3.1.1"
types-regex = "^2024.5.10.20240512"
types-requests = "^2.31.0.10"
types-tqdm = "^4.66.0.4"

[tool.poetry.group.caution]
optional = true
# fairseq
[tool.poetry.group.caution.dependencies]
accelerate = "^0.29.1"
bitsandbytes = "^0.42.0"
ctranslate2 = "^4.1.0"
datasets = "^2.18.0"
deepspeed = "0.14.0"
evaluate = "^0.4.1"
faiss-cpu = "^1.7.4"
huggingface_hub = {extras = ["cli"], version = "^0.22.2"}
lightning = "^2.1.2"
optimum = "^1.18.0"
peft = "^0.10.0"
tensorboardx = "^2.6.2.2"
tensorflow-io-gcs-filesystem = "0.34.0"
torchinfo = "^1.8.0"
torchtext = "^0.16.0"
transformers = "^4.39.3"
trl = "^0.8.1"

[tool.poetry.group.macos-arm]
# mamba install -c=apple tensorflow-deps -y
optional = true
[tool.poetry.group.macos-arm.dependencies]
tensorflow-macos = "2.15.0"
tensorflow-metal = "1.1.0"
torch = "2.1.1"

[tool.poetry.group.linux-cpu]
optional = true
[tool.poetry.group.linux-cpu.dependencies]
tensorflow = "2.15.0"
torch = "2.1.1"

[tool.poetry.group.linux-gpu]
# mamba install cudatoolkit cudnn -y
optional = true
[tool.poetry.group.linux-gpu.dependencies]
tensorflow = "2.15.0"
torch = "2.1.1"
xformers = "0.0.23"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

# https://github.com/charliermarsh/ruff#configuration
[tool.ruff.lint]
ignore = ["E501"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.mypy]
exclude = [] 
explicit_package_bases = true # https://mypy.readthedocs.io/en/stable/config_file.html#confval-explicit_package_bases
mypy_path = "$MYPY_CONFIG_FILE_DIR" # https://mypy.readthedocs.io/en/stable/config_file.html#import-discovery
# mypy --strict (mypy --help)
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = false
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "chromedriver_autoinstaller",
  "cpuinfo",
  "ctranslate2",
  "datasets",
  "evaluate.module",
  "evaluate",
  "fairseq.data",
  "fairseq.hub_utils",
  "fairseq.models.transformer",
  "gradio",
  "hanja",
  "korean_romanizer.romanizer",
  "matplotlib.figure",
  "matplotlib.pyplot",
  "matplotlib",
  "nltk.metrics.distance",
  "pandarallel",
  "sentencepiece",
  "seqeval.metrics",
  "sklearn.metrics",
  "sklearn.model_selection",
  "tensorflow",
  "tikzplotlib",
  "tokenizers.implementations.sentencepiece_bpe",
  "tokenizers.implementations.sentencepiece_unigram",
  "torchvision.datasets",
  "torchvision.transforms",
  "torchvision",
  "transformers.modeling_outputs",
  "transformers.models.nllb.tokenization_nllb_fast",
  "transformers.pipelines.token_classification",
  "transformers",
  "trl",
  "unsloth",
]
